--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Financial-Times/ngda-api",
   "dependencies": {
     "aws-sdk": "^2.1.27",
+    "forever": "^0.14.1",
     "moment": "^2.10.3",
     "node-uuid": "^1.4.3",
     "querystring": "^0.2.0"
