--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "dependencies": {
     "aws-sdk": "^2.1.27",
     "forever": "^0.14.1",
+    "haikro": "^1.14.1",
     "moment": "^2.10.3",
-    "node-uuid": "^1.4.3",
-    "querystring": "^0.2.0"
+    "node-uuid": "^1.4.3"
   }
 }
