--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/Financial-Times/spoor-api",
   "dependencies": {
     "aws-sdk": "^2.1.27",
+    "body-parser": "^1.12.4",
     "chai": "^2.3.0",
     "connect": "^3.3.5",
     "es6-promise": "^2.0.1",
+    "express": "^4.12.4",
     "forever": "^0.14.1",
     "haikro": "^1.14.1",
     "mocha": "^2.2.5",
