--- a/package.json
+++ b/package.json
@@ -30,5 +30,12 @@
     "node-statsd": "^0.1.1",
     "node-uuid": "^1.4.3",
     "raw-body": "^2.0.2"
+  },
+  "devDependencies": {
+    "chai": "^2.3.0",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.1.0",
+    "mocha": "^2.2.5",
+    "supertest": "^1.0.1"
   }
 }
